--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: hive_multiisolate
 description: A class allowing the user of Hive across isolates.
-version: 1.0.0
+homepage: https://github.com/TheCarpetMerchant/hive_multiisolate
+version: 1.1.0
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
