--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,14 @@
 name: hive_multiisolate
-description: A class allowing the user of Hive across isolates. It opens the box, execute the operation and closes it immediately.
+description: A class allowing the use of Hive across isolates. It opens the box, execute the operation and closes it immediately.
 homepage: https://github.com/TheCarpetMerchant/hive_multiisolate
-version: 1.2.1
+version: 1.3.0
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  hive: ^2.0.0
+  hive: '>=2.0.0 <4.0.0'
 
 dev_dependencies:
   lints: ^2.0.0
+  test: ^1.23.1
